Fix projects overflow

--- a/scss/projects/main.scss
+++ b/scss/projects/main.scss
@@ -34,7 +34,6 @@
 }
 
 .projects-overlay {
-  padding: 10px;
   text-align: center;
   position: absolute;
     top: 0;
@@ -61,7 +60,9 @@
   position: absolute;
     top: 50%;
   width: 100%;
-  padding: 20px;
+  padding: 30px;
+  -moz-box-sizing: border-box;
+       box-sizing: border-box;
   -webkit-transform: translateY(-50%) scale(.2);
       -ms-transform: translateY(-50%) scale(.2);
           transform: translateY(-50%) scale(.2);
